fix(modal): set overflow to auto

--- a/src/bricks/modal/modal.module.css
+++ b/src/bricks/modal/modal.module.css
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   max-height: 80%;
-  overflow: scroll;
+  overflow: auto;
   position: fixed;
   overscroll-behavior: none;
 }
